--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
-
+  <link href="assets/leaflet/leaflet.css" rel="stylesheet">
 </head>
 <body>
 
