--- a/src/pages/geofence-list/geofence-list.html
+++ b/src/pages/geofence-list/geofence-list.html
@@ -9,11 +9,8 @@
 
 <ion-content class="geofence-list-page">
   <ion-list inset *ngIf="!isLoading && geofences.length > 0">
-    <div *ngFor="let geofence of geofences" (click)="showDetails(geofence)">
-
-    </div>
-    <!-- <geofence-list-item *ngFor="let geofence of geofences" [geofence]="geofence" (onItemTapped)="geofenceItemTapped(geofence)">
-    </geofence-list-item> -->
+    <geofence-list-item *ngFor="let geofence of geofences" [geofence]="geofence" (onItemTapped)="showDetails(geofence)">
+    </geofence-list-item>
   </ion-list>
 
   <ion-card *ngIf="!isLoading && geofences.length === 0">
